syntax = "proto3";

package pagamento;

option go_package = "auction-system/proto/pagamento";

service PagamentoService {
  rpc NotifyAuctionWinner(AuctionWinnerNotification) returns (Empty);
  rpc NotifyPaymentLink(PaymentLinkNotification) returns (Empty);
  rpc NotifyPaymentStatus(PaymentStatusNotification) returns (Empty);
}

message AuctionWinnerNotification {
  string leilao_id = 1;
  string user_id = 2;
  double valor = 3;
}

message PaymentLinkNotification {
  string user_id = 1;
  string payment_link = 2;
  string transaction_id = 3;
  string auction_id = 4;
}

message PaymentStatusNotification {
  string user_id = 1;
  string transaction_id = 2;
  string status = 3;
  string auction_id = 4;
}

message Empty {}